--- a/Sprint-2/public/css/home.css
+++ b/Sprint-2/public/css/home.css
@@ -23,7 +23,9 @@
     justify-content: space-evenly;
     margin:auto;
     width: 90%;
+    background-color: #fff;
     height: auto;
+    padding-top: 20px;
 }
 
 .main .product{
@@ -43,12 +45,11 @@
     border:1px #000 solid;
 }
 
-.main .conteiner-products .product .product-description{
-    background-color: #fff;
+.main .conteiner-products .product .product-description{ /*cambios en margin y padinng de p span y description*/
     width: 100%;
     height: 100px;
     text-align: center;
-    padding: 10px;
+    padding: 7px;
     border-left: 1px #000 solid;
     border-right: 1px #000 solid;
     border-bottom:  1px #000 solid;
@@ -56,24 +57,32 @@
 .main h3.name-product{
     font-size: 1.3em;
     color:#686868;
-    margin: 0;
+    margin: auto;
+
 }
 .main p{
+    color: black;
     font-size: 1.1em;
     font-weight: bold;
-    margin: 0;
+    margin: auto;
 }
 .main span{
+    color: black;
     font-weight: normal;
+    margin: auto;
 }
 
-@media(min-width:460px){
+@media(min-width:510px){
     .main .product{
         width: 45%;
         height: 400px;
         }
     }
 @media(min-width:768px){
+    .main{
+        padding-bottom:20px;
+        background-color: #fafafa;
+    }
     .product:hover{
         transform: scale(1.1);
         box-shadow: 0px 5px 25px 8px #222222;
@@ -84,20 +93,16 @@
     }
     .main .titulo-Destacados{
         font-size: 2em;
-        padding: 70px 0 20px 0;
+        padding: 70px 0 0 0;
     }
-    .main .product{
-        width: 20%;
-        height: 400px;
-        margin-bottom: 40px;
-        }
-        .main .conteiner-products{
-            width: 100%;
-        }
-    }
-    @media(min-width:768px){
     .main .product{
         width: 250px;
+        height: 400px;
+        margin: 0 10px 40px 10px; 
+    }
+    .main .conteiner-products{
+        padding-top: 40px;
+
     }
     .main .conteiner-products{
         width: 90%;
