--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -1,1 +1,46 @@
- 
+<header>
+    <nav class="content">
+        <!-- l o g o -->
+        <div class="logo">
+            <a href="/" class="home"><img src="/images/logo.png" alt="Akamaru"></a>
+        </div>
+  
+         <!-- b o t o n e s -->
+        <div class="nav-left">
+            <ul class="menu menu_visible">
+                <li><a href="/" class="enlaces">Inicio</a></li>
+                <li><a href="/" class="enlaces">Productos</a>
+                    <ul class="submenu">
+                        <li><a href="/#" class="enlaces">Tazas</a></li>
+                        <li><a href="/#" class="enlaces">Mochilas y bolsos</a></li>
+                        <li><a href="/#" class="enlaces">Cartucheras</a></li>
+                        <li><a href="/#" class="enlaces">Accesorios</a></li>
+                        <li><a href="/#" class="enlaces">Figuras</a></li>
+                        <li><a href="/#" class="enlaces">Mangas</a></li>
+                    </ul> 
+                </li>
+                <li><a href="/#" class="enlaces">Nosotros</a></li>
+                <li><a href="/#" class="enlaces">FAQ</a></li>
+                <ul class="enlaces-resp">
+                    <li><a href="/users/login" class="enlaces"><b>Iniciar sesión</b></a></li>
+                    <li><a href="/users/register" class="enlaces"><b>Registrate</b></a></li>
+                    <li><a href="/users/cart" class="enlaces"><b>Carrito</b></a></li>
+                </ul>
+            </ul>
+        </div>
+          
+        <!-- i c o n o s -->
+        <div class="nav-right">
+            <ul class="menu-icons">
+                <li><a href="/#" class="icons"><i class="fas fa-search"></i></a></li>
+                <li><a href="/users/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="/users/login" class="icons"><i class="fas fa-user"></i></a></li>
+            </ul>
+        </div>
+  
+        <!-- m e n u  h a m b u r g u e s a -->
+        <button class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </button>
+    </nav>
+  </header>
