Add productAdd, productEdit, footer y detail

--- a/sitio/src/views/partials/footer.ejs
+++ b/sitio/src/views/partials/footer.ejs
@@ -1,1 +1,71 @@
- 
+<footer>
+    <div class="container-footer-m">
+        <div class="container-footer">
+            <div class="column0">
+                <img class="column0-img" src="\images\AKAMARU-banner.png" alt="">
+            </div>
+            <div class="column1">
+                <h3>Información de la Empresa </h3>
+                <p>Akamaru es una empresa argentina de Merchandising de anime que nació en plena pandemia para
+                    llevarle
+                    al público fan del anime como Naruto, Dragon Ball, etc., los mejores productos del mercado con
+                    la
+                    comodidad de comprar vía web y recibirlos en su domicilio, sin necesidad de salir de su casa.
+                </p>
+            </div>
+            <div class="column2">
+                <h3>Redes Sociales</h3>
+                <!-- r o w = f i l a -->
+                <div class="column2-row">
+                    <div class="column2-row-icon-fb">
+                        <i class="fab fa-facebook icon"></i>
+                        <label for="">Siguenos en Facebook</label>
+                    </div>
+                    <div class="column2-row-icon-tw">
+                        <i class="fab fa-twitter icon"></i>
+                        <label for="">Siguenos en Twitter</label>
+                    </div>
+                    <div class="column2-row-icon-ins">
+                        <i class="fab fa-instagram icon"></i>
+                        <label for="">Siguenos en Instagram</label>
+                    </div>
+                    <div class="column2-row-icon-wsp">
+                        <i class="fab fa-whatsapp icon"></i>
+                        <label for="">Contactanos por Whatsapp</label>
+                    </div>
+                </div>
+            </div>
+            <div class="column3">
+                <h3>Información de contacto</h3>
+                <div class="column3-row">
+                    <div class="column3-row-icon-home">
+                        <i class="fas fa-home icon"></i>
+                        <label for="">Calle falsa 123, Buenos Aires, Argentina</label>
+                    </div>
+                    <div class="column3-row-icon-mobile">
+                        <i class="fas fa-mobile-alt icon"></i>
+                        <label for="">+54 1234-4526</label>
+                    </div>
+                    <div class="column3-row-icon-mail icon">
+                        <i class="fas fa-envelope"></i>
+                        <label for="">akamaru.ventas@gmail.com</label>
+                    </div>
+                </div>
+            </div>
+  
+        </div>
+        <div class="container-footer2">
+            <div class="container-footer2a">
+                <div class="container-footer2-copyright">
+                    <a href="">Copyright © 1999-2021 Akamaru S.R.L
+                    </a>
+                </div>
+                <div class="container-footer2-terminos">
+                    <a href="">Términos y Condiciones</a> |
+                    <a href="">Politica de Cookies</a> |
+                    <a href="">Politica de Privacidad</a>
+                </div>
+            </div>
+        </div>
+    </div>
+  </footer>
