--- a/sitio/src/views/productEdit.ejs
+++ b/sitio/src/views/productEdit.ejs
@@ -1,1 +1,34 @@
- 
+<!DOCTYPE html>
+<html lang="es">
+<%- include('./partials/head')  %> 
+<body  >
+
+    <%- include('./partials/header')  %> 
+    
+    <section class="container">
+        <div class="formulario mt-5">
+            <h2>Editar Producto</h2>
+            <form action="/products/edit/<%= producto.id %>?_method=PUT" method="POST">
+                <div class="mb-3">
+                    <label for="formGroupExampleInput" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" name="title" value="<%= producto.title %>">
+                  </div>
+                  <div class="mb-3">
+                    <label for="floatingTextarea">Descripción</label>
+                    <textarea class="form-control" id="floatingTextarea" name="description"><%= producto.description %> </textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="formGroupExampleInput2" class="form-label">Precio</label>
+                    <input type="number" class="form-control" id="formGroupExampleInput2" name="price" value=<%= producto.price %>>
+                  </div>
+                 
+                  <button class="btn btn-primary" type="submit">Guardar</button>
+            </form>
+        </div>
+    </section>
+
+     <!-- Footer -->
+     <%- include('./partials/footer.ejs') %>
+
+</body>
+</html>
