--- a/sitio/public/stylesheets/header.css
+++ b/sitio/public/stylesheets/header.css
@@ -1,18 +1,32 @@
-
-
-header{
-    background-color: white;
-    padding: 20px;
-    margin: auto;
-    position: relative;
-    z-index: 10000;
-    
+header {
+    width: 100%;
+    height: 90px;
 }
 
-nav {
-    width: 95%;
+
+header .div-cont{
+    background-color: white;
+    padding: 10px;
     margin: auto;
-    
+    width: 100%;
+    position: fixed;
+    z-index: 10000;
+}
+
+
+
+/*header {
+    background: rgba(255,255,255,0.9);
+    width: 100%;
+    position: fixed;
+    z-index: 10000;
+    padding: 20px;
+}*/
+  
+
+nav {
+    width: 100%;
+    margin: auto;
 }
 
 .content{
@@ -30,7 +44,7 @@ nav {
     background-color: white;
     position: fixed;
     left: 0;
-    top: 100px;
+    top: 95px;
     width: 100%;
     height: 100%;
     padding: 0 20px;
@@ -67,7 +81,7 @@ nav {
 }
 
 .logo {
-    height: 80px;
+    height: 100%;
 }
 
 .logo img{
@@ -168,7 +182,7 @@ header ul a {
         background-color: white;
         position: fixed;
         left: 0;
-        top: 100px;
+        top: 95px;
         width: 100%;
         padding: 20px 0;
     
@@ -177,8 +191,9 @@ header ul a {
     }
 
     .menu-icons {
-    margin-top: 3px;
-}
+        padding: 0;
+        margin: 0;
+    }
 
     .menu_visible{
         left: 100%;
@@ -257,8 +272,9 @@ header ul a {
 
     .menu{
         position: relative;
-        top: 0px;
-   
+        top: 0;
+        margin: 0;
+        padding: 5px 20px;
     }
 
     .menu > li {
