--- a/sitio/src/views/partials/header.ejs
+++ b/sitio/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <nav class="content">
             <!-- l o g o -->
             <div class="logo">
-                <a href="/" class="home"><img src="/images/logo2.png" alt="Akamaru"></a>
+                <a href="/" class="home"><img src="/images/Logo.png" alt="Akamaru"></a>
             </div>
 
             <!-- b o t o n e s -->
@@ -23,9 +23,9 @@
                     <li><a href="/#" class="enlaces">Nosotros</a></li>
                     <li><a href="/#" class="enlaces">FAQ</a></li>
                     <ul class="enlaces-resp">
-                        <li><a href="/login" class="enlaces"><b>Iniciar sesión</b></a></li>
-                        <li><a href="/register" class="enlaces"><b>Registrate</b></a></li>
-                        <li><a href="/cart" class="enlaces"><b>Carrito</b></a></li>
+                        <li><a href="/users/login" class="enlaces"><b>Iniciar sesión</b></a></li>
+                        <li><a href="/users/register" class="enlaces"><b>Registrate</b></a></li>
+                        <li><a href="/users/cart" class="enlaces"><b>Carrito</b></a></li>
                     </ul>
                 </ul>
             </div>
@@ -34,8 +34,8 @@
             <div class="nav-right">
                 <ul class="menu-icons">
                     <li><a href="/#" class="icons"><i class="fas fa-search"></i></a></li>
-                    <li><a href="/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
-                    <li><a href="/login" class="icons"><i class="fas fa-user"></i></a></li>
+                    <li><a href="/users/cart" class="icons"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a href="/users/login" class="icons"><i class="fas fa-user"></i></a></li>
                 </ul>
             </div>
 
